problem with not fitting answers in poll overlay  solved

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -331,7 +331,7 @@ body {
 
 #chart-wrapper {
   position: relative;
-  height: 500px;
+  height: 1000px;
   max-width: 100%;
   margin-top: 16px;
 }
